--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <a href="./recipes/lasagna.html">Lasagna</a>
+            <a href="./recipes/lemonade.html">Lasagna</a>
+            <a href="./recipes/pie.html">Lasagna</a>
+        </ul>
+        
 </body>
 </html>
