Added proper path for image sources in the recipes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
         <ul>
             <a href="./recipes/lasagna.html">Lasagna</a>
-            <a href="./recipes/lemonade.html">Lasagna</a>
-            <a href="./recipes/pie.html">Lasagna</a>
+            <a href="./recipes/lemonade.html">Lemonade</a>
+            <a href="./recipes/pie.html">Pie</a>
         </ul>
         
 </body>
