--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lemonade Recipe</h1>
-    <img src="./images/lasagna.jpeg" alt="Lemonade">
+    <img src="../images/lemonade.jpeg" alt="Lemonade">
     <h2>Description about Lemonade</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eius iusto libero ut fugiat aliquid molestiae quia nisi! Necessitatibus labore laborum ea laboriosam, velit vel similique fuga ab eaque neque.</p>
     <h2>Ingredients</h2>
