--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="./images/lasagna.jpeg" alt="Lasagna">
+    <img src="../images/lasagna.jpeg" alt="Lasagna">
     <h2>Description about lasagna</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eius iusto libero ut fugiat aliquid molestiae quia nisi! Necessitatibus labore laborum ea laboriosam, velit vel similique fuga ab eaque neque.</p>
     <h2>Ingredients</h2>
