Added 'list item' in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
         <ul>
-            <a href="./recipes/lasagna.html">Lasagna</a>
-            <a href="./recipes/lemonade.html">Lemonade</a>
-            <a href="./recipes/pie.html">Pie</a>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/lemonade.html">Lemonade</a></li>
+            <li><a href="./recipes/pie.html">Pie</a></li>
         </ul>
         
 </body>
